--- a/pod.yaml
+++ b/pod.yaml
@@ -6,6 +6,6 @@ spec:
   containers:
   - name: nginx
     image: nginx
-  - name: alma
-    image: "almalinux:9"
-    command: [ "sleep","2000" ]
+  # - name: alma
+  #   image: "almalinux:9"
+  #   command: [ "sleep","2000" ]
