--- a/pod.yaml
+++ b/pod.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: pod
 spec:
   containers:
   - name: nginx
     image: nginx
-  # - name: alma
-  #   image: "almalinux:9"
-  #   command: [ "sleep","2000" ]
+  - name: alma
+    image: "almalinux:9"
+    command: [ "sleep","2000" ]
