--- a/cluster.yaml
+++ b/cluster.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: basic-cluster
+  name: normal-cluster
   region: us-east-1
 
 managedNodeGroups:
